add_library(lf-platform-impl STATIC)
add_library(lf::platform-impl ALIAS lf-platform-impl)
target_sources(lf-platform-impl PUBLIC ${CMAKE_CURRENT_LIST_DIR}/platform.c)
target_link_libraries(lf-platform-impl PRIVATE lf::low-level-platform-api)
target_link_libraries(lf-platform-impl PRIVATE lf::platform-api)
