add_library(lf-platform-impl STATIC)
add_library(lf::platform-impl ALIAS lf-platform-impl)
target_sources(lf-platform-impl PUBLIC ${CMAKE_CURRENT_LIST_DIR}/platform.c)
target_link_libraries(lf-platform-impl PRIVATE lf::low-level-platform-api)
target_link_libraries(lf-platform-impl PRIVATE lf::platform-api)

macro(platform_define X)
    if(DEFINED ${X})
        message(STATUS ${X}=${${X}})
        target_compile_definitions(lf-platform-impl PRIVATE ${X}=${${X}})
    endif(DEFINED ${X})
endmacro()
platform_define(LF_SINGLE_THREADED)
platform_define(LOG_LEVEL)
platform_define(MODAL_REACTORS)
platform_define(USER_THREADS)
platform_define(NUMBER_OF_WORKERS)
platform_define(NUMBER_OF_WATCHDOGS)
